
syntax = "proto2";

package mesop.components.progress_spinner;

message ProgressSpinnerType {
  optional string color = 1;
  optional double diameter = 4;
  optional double stroke_width = 5;
}
